tests/fail/shared_scope_mutate.stderr
tests/fail/shared_scope_mutate.tk:12:7: error[E0442]: Cannot mutably borrow immutable entity 'p'
tests/fail/shared_scope_mutate.tk:12:7: error[E0406]: Cannot assign to immutable entity. Missing writable token '#' or '!'.
tests/fail/shared_scope_mutate.tk:12:5: error[E0443]: Cannot modify immutable entity 'i32'
